Fixed alignments

--- a/styles.css
+++ b/styles.css
@@ -65,12 +65,20 @@ body {
 
 
 
-
 ul {
     overflow: hidden;
     max-height: 0;
     transition: max-height .2s ease-out;
 }
+
+li a {
+    color: white;
+}
+
+
+
+
+
 label {
     cursor: pointer;
     display: inline-block;
@@ -120,18 +128,6 @@ input:checked ~ label:not(.steps) span:before, input:checked ~ label:not(.steps)
     top: 0;
 }
 
-@media screen and (min-width:834px) {
-    ul {
-        overflow: visible;
-        position: absolute;
-        top: 0;
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    }
-    label span, input {
-        display: none;
-    }
-}
 
 
 
@@ -144,6 +140,10 @@ header {
     float: left;
     padding: 10px 20px;
     margin-bottom: 25px;
+}
+
+header h1 {
+    padding-bottom: 10px;
 }
 
 h1 {
@@ -159,7 +159,13 @@ p, dl, dd {
 }
 
 footer p {
-    font-size: .75em;
+        font-size: .75em;
+        text-align: center;
+        margin-left: auto;
+        margin-right: auto;
+        background-color: white;
+        color: #590242;
+        padding-bottom: 20px;
 }
 
 
@@ -182,12 +188,8 @@ nav h2 {
 
 
 
-
-
-
-
-
 h2 {
+    font-variant: small-caps;
     color: #590242;
     font-weight: bold;
     padding-left: 50px;
@@ -243,7 +245,6 @@ dd {
 
 
 
-
 audio {
     position: absolute;
     bottom: 150px;
@@ -282,7 +283,6 @@ audio::-webkit-media-controls-enclosure {
 
 
 
-
 .more {
     text-decoration: none;
     background-color: #590242;
@@ -305,19 +305,33 @@ audio::-webkit-media-controls-enclosure {
 
 
 .both3 {
+    position: relative;
+    font-variant: small-caps;
     display: block;
     color: #590242;
     font-weight: bold;
-    margin-left: 30px;
     margin-bottom: 10px;
+    text-align: center;
+    left: -80px;
 }
 
-.container h3, p {
+.container h3 {
+    font-variant: small-caps;
+    font-weight: bold;
     text-align: center;
     margin-left: auto;
     margin-right: auto;
     padding: 5px;
 }
+
+.container p {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 5px;
+}
+
+
 
 
 
@@ -337,9 +351,6 @@ audio::-webkit-media-controls-enclosure {
     border-radius: 5px;
     padding: 8px;
 }
-
-
-
 
 
 
@@ -366,8 +377,6 @@ audio::-webkit-media-controls-enclosure {
 
 
 
-
-
 #yourplaylists ::-webkit-scrollbar {
     width: 15px;
 }
@@ -385,6 +394,7 @@ audio::-webkit-media-controls-enclosure {
 
 
 
+
 #curatedplaylists ::-webkit-scrollbar {
     width: 15px;
 }
@@ -398,6 +408,43 @@ audio::-webkit-media-controls-enclosure {
 #curatedplaylists ::-webkit-scrollbar-thumb:hover {
     background: #020873;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -439,9 +486,52 @@ main {
     background-color: white;
 }
 
-header h1 {
-    padding-left: 5px;
+nav {
+    width: 834px;
+    padding-bottom: 1px;
 }
+
+ul {
+    overflow: visible;
+    position: absolute;
+    top: 0;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+}
+label span, input {
+    display: none;
+}
+
+nav ul {
+    align-content: space-between;
+    width: 834px;
+}
+
+.title {
+    font-variant: small-caps;
+    font-size: 35px;
+}
+
+ul + li {
+    padding-top: 20px;
+}
+
+ul li {
+    text-align: center;
+    padding-top: 10px;
+    font-variant: small-caps;
+    padding-left: 20px;
+}
+
+a:link {
+    text-decoration: none;
+}
+
+
+header h1 {
+    padding-bottom: 10px;
+}
+
 header p {
     text-align: left;
 }
@@ -496,7 +586,15 @@ header p {
     width: 834px;
 }
 
+.container p {
+    padding: 0;
+}
 
+.both3 {
+    position: relative;
+    font-variant: small-caps;
+    left: -90px;
+}
 
 .scroll2 {
     display: inline-block;
@@ -519,22 +617,21 @@ header p {
 }
 
 .scroll2 img {
+    position: relative;
     display: inline;
     float: left;
     margin-top: -8px;
     padding-right: 10px;
+    right: 8px;
 }
 
 .scroll2 h3 {
-    display: inline-block;   
+    font-variant: small-caps;
+    font-weight: bold;  
     color: white;
     margin-top: -10px;
-}
-
-.scroll2 p {
-    display: inline;
-    max-width: 200px;
-    margin-top: -10px;
+    margin-left: 35px;
+    text-align: center;
 }
 
 .scroll2 div {
@@ -570,34 +667,22 @@ header p {
 }
 
 .scroll3 img {
+    position: relative;
     display: inline;
     float: left;
     margin-top: -8px;
     padding-right: 10px;
+    right: 7px;
 }
 
 .scroll3 h3 {
-    display: inline-block;   
+    font-variant: small-caps;
+    font-weight: bold;  
     color: white;
     margin-top: -10px;
+    margin-left: 35px;
+    text-align: center;
 }
-
-.scroll3 p {
-    display: inline;
-    max-width: 200px;
-    margin-top: -10px;
-}
-
-
-
-
-.both3 {
-    margin-left: 50px;
-}
-
-
-
-
 
 
 
